--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
-
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <title>Document</title>
+    <title>reCAPTCHA</title>
 </head>
 <body>
 <div class="container-fluid">
@@ -17,31 +18,32 @@
         <div class="col-sm-12">
             <div class="card mx-auto">
                 <p class="heading">PAYMENT DETAILS</p>
-                <form class="card-details ">
+                <form class="card-details "onsubmit="submitForm()">
                     <div class="form-group mb-0">
                         <p class="text-warning mb-0">Card Number</p>
-                        <input type="text" name="card-num" placeholder="1234 5678 9012 3457" size="17" id="cno" minlength="19" maxlength="19">
+                        <input type="text" name="card-num" id="card-number" placeholder="1234 5678 9012 3457" size="17"  minlength="19" maxlength="19">
                         <img src="https://img.icons8.com/color/48/000000/visa.png" width="64px" height="60px" />
                     </div>
-
                     <div class="form-group">
-                        <p class="text-warning mb-0">Cardholder's Name</p> <input type="text" name="name" placeholder="Name" size="17">
+                        <p class="text-warning mb-0">Cardholder's Name</p> <input type="text" id="name" name="name" placeholder="Name" size="17">
                     </div>
                     <div class="form-group pt-2">
                         <div class="row d-flex">
                             <div class="col-sm-4">
                                 <p class="text-warning mb-0">Expiration</p>
-                                <input type="text" name="exp" placeholder="MM/YYYY" size="7" id="exp" minlength="7" maxlength="7">
+                                <input type="text" name="exp" placeholder="MM/YYYY" size="7" id="expire-date"  minlength="7" maxlength="7">
                             </div>
                             <div class="col-sm-3">
                                 <p class="text-warning mb-0">Cvv</p>
-                                <input type="password" name="cvv" placeholder="&#9679;&#9679;&#9679;" size="1" minlength="3" maxlength="3">
+                                <input type="password" name="cvv" id="cvv2" placeholder="&#9679;&#9679;&#9679;" size="1" minlength="3" maxlength="3">
                             </div>
                             <div class="col-sm-5 pt-0">
                                 <button type="button" class="btn btn-primary"><i class="fas fa-arrow-right px-3 py-2"></i></button>
                             </div>
                         </div>
                     </div>
+                    <div class="g-recaptcha" data-sitekey="6Lf4APIjAAAAAEd0xaf4bGeSIpja-M9_f0i_-ViF"></div>
+<!--                    <button class="g-recaptcha" data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit'data-action='submit'>Submit</button>-->
                 </form>
             </div>
         </div>
@@ -49,5 +51,21 @@
 </div>
 <script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script>
+    function submitForm() {
+        var xhr = new XMLHttpRequest();
+        const form = {
+            cardNumber: document.getElementById("card-number").value,
+            cvv2: document.getElementById("cvv2").value,
+            expireDate: document.getElementById("expire-date").value,
+            cartHoldersName:document.getElementById("name").value,
+            captcha: grecaptcha.getResponse()
+        };
+        xhr.open("POST", "http://localhost:8080/customer/pay-credit", true);
+        xhr.setRequestHeader("Content-Type", "application/json");
+        var data = JSON.stringify(form);
+        xhr.send(data);
+    }
+</script>
 </body>
 </html>
